style.css
.title {
  font-size: 60px;
  font-weight: bold;
  margin: 16px;
  text-align: center;
  color: #000000;
  position: absolute;
  top: 120px;
  
  z-index: 2; 
}
.time {
    position: relative;
    top: 15px; 
    text-align: center;
    font-size: 60px;
    font-weight: bold;
    margin-bottom: 10px; 
  }
  

body {
    font-family: 'Roboto', sans-serif;
    margin: 0;
    padding: 0;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    transition: background-image 0.5s ease-in;
  }
  
  .backgroundContainer {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    background-image: url(/backgrounds/clear.png);
    background-size: cover;
    background-repeat: no-repeat;
    display: flex;
    justify-content: center;
    align-items: center;
    transition: background-image 1s ease;
}


  .weather-card {
    background-color: #fff;
    border-radius: 8px;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
    overflow: hidden;
    width: 300px;
    text-align: center;
  }
  
  .search-bar-container {
    display: flex;
    align-items: flex-start;
    padding: 15px;
  }
  
  .search-bar {
    flex: 1;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
    outline: none;
  }
  
  .search-button {
    background-color: #4caf50;
    color: #fff;
    border: none;
    padding: 10px;
    border-radius: 4px;
    cursor: pointer;
    outline: none;
    transition: background-color 0.3s ease;
  }
  

  .search-button i {
    font-size: 1.2em; 
  }
  
  .search-button:hover {
    background-color: #45a049;
  }
  
  .time {
    position: relative;
    top: 15px;
    text-align: center;
    font-size: 60px;
    font-weight: bold;
    margin-bottom: 10px;
    z-index: 1;
  }
  
  
 
  
  .search-button:hover {
    background-color: #45a049; 
  }
  
  
  .weather-details {
    padding: 20px;
  }
  
  .city {
    font-size: 1.5em;
    margin-bottom: 10px;
  }
  
  .temp {
    font-size: 2.5em;
    font-weight: bold;
    margin-bottom: 15px;
  }
  
  .humidity,
  .wind {
    margin-bottom: 10px;
  }
  

  .bookmarks-container {
    position: absolute;
    top: 10px; 
    left: 10px; 
    z-index: 1;
  }
  
  
  .dropbtn {
    background-color: #3498db;
    color: white;
    padding: 10px;
    font-size: 16px;
    border: none;
    cursor: pointer;
    border-radius: 4px;
  }
  
  
  .dropdown-content {
    display: none;
    position: absolute;
    background-color: #e9e7e7;
    min-width: 160px;
    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
    z-index: 1;
    transition: opacity 0.3s ease;
    border-radius: 4px;
  }
  
  
  .dropdown:hover .dropdown-content {
    display: block;
    opacity: 1;
    
  }

  .dropdown-item {
    text-align: center;
    margin-top: 5px;
    margin-bottom: 5px;
  }
  

  .dropdown-item:hover {
    color: #4548f7; 
    cursor: pointer;
  }


  .bookmark-button {
    background-color: #4CAF50;
    color: white; 
    padding: 10px 20px; 
    font-size: 16px; 
    border: none; 
    border-radius: 5px; 
    cursor: pointer; 
    transition: background-color 0.3s; 
    margin-top: 10px;
  }
  
  .bookmark-button:hover {
    background-color: #45a049; 
  }

